[package]
name = "mixxx-merge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
sea-orm = { version = "0.12", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
inquire = "0.7.5"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
