[package]
name = "mixxxkit"
authors = ["Magnus Reyes <me@magnusreyes.com"]
description = "CLI tool to help manage Mixxx 2.4 libraries"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
sea-orm = { version = "0.12", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
inquire = "0.7.5"
clap = { version = "4.5.4", features = ["derive"] }
chrono = "0.4.38"
yaml-rust = "0.4.5"
indoc = "2.0.5"
futures-util = "0.3.30"
strum = { version = "0.26.2", features = ["derive"] }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
single_match_else = "allow"
